--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-<main>
-<h1>firstpage</h1>
-</main>
+  <main>
+    <img src="https://images.pexels.com/photos/220201/pexels-photo-220201.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+    <h1>firstpage</h1>
+  </main>
+
 <body>
 <p>gksglsdfjlosdkjfg</p>
 </body>
