--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <main>
     <img src="https://images.pexels.com/photos/220201/pexels-photo-220201.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+
+    <a href="https://freecodecamp.org">this links to freecodecamp.org</a>
     <h1>firstpage</h1>
   </main>
 
