--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
+<style>
+
+.smaller-image {
+  width: 500px
+}
+
+.thick-blue-border {
+  border-color: blue;
+  border-width: 10px;
+  border-style: solid;
+  border-radius: 50%
+
+}
+
+</style>
   <main>
-    <img src="https://images.pexels.com/photos/220201/pexels-photo-220201.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+    <img class="smaller-image thick-blue-border"src="https://images.pexels.com/photos/220201/pexels-photo-220201.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
 
     <a href="https://freecodecamp.org">this links to freecodecamp.org</a>
     <h1>firstpage</h1>
